--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><ahref=<p><ahref="christmas%20card.pdf">click here to update</a></p>
+  <p><ahref="https://github.com/kyagambiddwa/pdf-reniew/blob/main/christmas%20card.pdf">click here to confirm</a></p>
 </html>
